traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value unary_! is not a member of Unit
  while (!posFinale()) {
         ^Snake:17: warning: enclosing method posFinale has result type Unit: return value discarded
      return !estFaceMur()
      ^Snake:26: warning: enclosing method posFinale has result type Unit: return value discarded
        return !estFaceMur()
        ^Snake:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:30: warning: enclosing method posFinale has result type Unit: return value discarded
      return false
      ^Snake:58: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:58: warning: enclosing method serpenter has result type Unit: return value discarded
    return false
    ^